Fix glView overflow

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -61,6 +61,7 @@ main {
 
 #glView {
   flex: 1;
+  overflow: hidden;
 }
 
 #xml {
